--- a/style.css
+++ b/style.css
@@ -6,12 +6,11 @@
 }
 body{
     box-sizing: border-box;
-    background-image: url(/assets/back.jpg);
+    background-color:  white;
 }
 .quadrado{
     position: absolute;
-    background:rgba(255, 255, 255, 0.8);
-    background-size: 100%;
+    background:#D9D9D9;
     border-radius: 5px;
     text-align: center;
     width: 750px;
@@ -19,23 +18,24 @@ body{
     z-index: -1;
 }
 .titulo{
-    padding: 2%;
-    color: rgb(0, 0, 0);
+    padding-top: 1%;
+    color: black;
     font-family: 'Montserrat', sans-serif;
-    font-size: 45px;
+    font-size: 2.8125rem;
    
 }
 .line{
     border-bottom: 3px solid black;
     max-width: 500px;
-    margin: 16px;
+    margin: 2rem;
     width: 100%;
 }
 .conteudo{
+    padding: 5%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5% ;
+
 }
 .foto{
     display: flex;
@@ -46,16 +46,43 @@ body{
     padding-top: 1%;
     display: flex;
     align-items: baseline;
-    gap:   70px;
+    justify-content: center;
+    gap: 40%;
+    height: 200px;
+    width: 200px;
 }
 .redes{
     display: flex;
-    height: 90px;
-    width: 90px;
+  
     justify-content: center;
     text-align: center;
     text-decoration: none;
     color: #22d4fd;
     font-family: 'Josefin Sans', sans-serif;
 }
+@media (max-width: 1200px){
+    
+    .conteudo{
 
+        padding-top: 75%;
+    }
+    .quadrado{
+        width: 500px;
+        height: 450px;
+    }
+    .foto{
+        height: 200px;
+    }
+    }
+    .titulo{
+        font-size: 2rem;
+    }
+    .line{
+        width: 400px;
+    }
+    .redes{
+        width: 3rem;
+        height: 3rem;
+    }
+   
+}  
