--- a/style.css
+++ b/style.css
@@ -61,9 +61,10 @@ body{
     font-family: 'Josefin Sans', sans-serif;
 }
 @media (max-width: 1200px){
-    
+    body{
+        padding-left: 5px;
+    }
     .conteudo{
-
         padding-top: 50%;
     }
     .quadrado{
