--- a/style.css
+++ b/style.css
@@ -62,7 +62,8 @@ body{
 }
 @media (max-width: 1200px){
     body{
-        padding-left: 5px;
+        display: flex;
+        justify-content: center;
     }
     .conteudo{
         padding-top: 50%;
