--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body{
     width: 100%;
 }
 .conteudo{
+
     padding: 5%;
     display: flex;
     flex-direction: column;
@@ -62,13 +63,16 @@ body{
 }
 @media (max-width: 1200px){
     body{
+
         display: flex;
         justify-content: center;
     }
     .conteudo{
+        justify-content: center;
         padding-top: 50%;
     }
     .quadrado{
+        background-color: white;
         width: 500px;
         height: 450px;
     }
@@ -87,4 +91,3 @@ body{
         height: 3rem;
     }
    
-}  
